--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.4",
+    "chart.js": "^4.4.4",
+    "chartjs-plugin-annotation": "^3.0.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "nuxt": "^3.13.0",
     "pinia": "^2.2.2",
-    "vue": "latest"
+    "vue": "latest",
+    "vue-chartjs": "^5.3.1"
+  },
+  "devDependencies": {
+    "@types/chartjs-plugin-annotation": "^0.5.5"
   }
 }
