--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.4",
+    "axios": "^1.7.5",
     "chart.js": "^4.4.4",
     "chartjs-plugin-annotation": "^3.0.1",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "http-proxy-middleware": "^3.0.0",
     "nuxt": "^3.13.0",
     "pinia": "^2.2.2",
     "vue": "latest",
