--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@pinia/nuxt": "^0.5.4",
+    "@vee-validate/yup": "^4.13.2",
     "axios": "^1.7.5",
     "chart.js": "^4.4.4",
     "chartjs-plugin-annotation": "^3.0.1",
@@ -20,6 +21,7 @@
     "http-proxy-middleware": "^3.0.0",
     "nuxt": "^3.13.0",
     "pinia": "^2.2.2",
+    "vee-validate": "^4.13.2",
     "vue": "latest",
     "vue-chartjs": "^5.3.1"
   },
