--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
     server {
         # listen on port 80
         listen 3000;
-        server_name 46.254.16.69;
+        server_name spf.credo-app.uz;
         # save logs here
         access_log /var/log/nginx/access.log compression;
 
