--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --dotenv .env",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -26,6 +26,7 @@
     "vue-chartjs": "^5.3.1"
   },
   "devDependencies": {
-    "@types/chartjs-plugin-annotation": "^0.5.5"
+    "@types/chartjs-plugin-annotation": "^0.5.5",
+    "ofetch": "^1.4.1"
   }
 }
